<resources>
    <string name="app_name">HamsCare</string>
    <string name="hello">Hello</string>
    <string name="pian">Pian</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="search_elements">Search Elements</string>
    <string name="search">Search</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="informasi_penyakit">Informasi Penyakit</string>
    <string name="petunjuk_pengguna">Petunjuk Pengguna</string>
    <string name="diagnosa_penyakit">Diagnosa Penyakit</string>
    <string name="trending">Trending</string>
    <string name="nav_home">home</string>
    <string name="nav_favorit">favorit</string>
    <string name="nav_account">account</string>
    <string name="nav_settings">settings</string>
    <string name="profile">profile</string>
    <string name="riwayat_diagnosa">Riwayat Diagnosa</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="gejala">Berdasarkan gejala yang dipilih, Hamster Anda mengalami</string>
    <string name="check">Cek Ulang Diagnosa</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="keluar_cairan_dari_hidung">Keluar Cairan Dari Hidung</string>
    <string name="name">nama</string>
    <string name="description">deskripsi</string>
    <string-array name="data_name">
        <item>Salesma</item>
        <item>Diare</item>
        <item>Diare (Jamur)</item>
        <item>Diare (Bakteri</item>
        <item>Flu Hamster</item>
        <item>Ekor Basah</item>
        <item>Sembelit</item>
        <item>Batu Ginjal</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id2">\n</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="pradiagnose_txt">Sebelum memulai diagnosa, kami ingin memastikan bahwa kesehatan hamster Anda sangat penting bagi kami. Jika hamster Anda menunjukkan gejala yang tidak biasa atau Anda merasa khawatir dengan kondisinya, kami sangat menyarankan Anda untuk segera membawa hamster ke dokter hewan yang berpengalaman dalam merawat hewan pengerat. Dokter hewan akan dapat memberikan diagnosis yang akurat dan perawatan yang tepat sesuai kebutuhan hamster Anda.</string>
    <string name="mulai_diagnosa">Apakah Anda ingin memulai diagnosa sekarang?</string>
    <string name="title_diagnosa">Diagnosa</string>
    <string name="text_btn_diagnosa">Mulai Diagnosa</string>
</resources>