<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authentication.LoginFragment"
    android:background="@drawable/background_page">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="230dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextEmail"
            android:layout_below="@id/textLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            app:boxStrokeColor="#559C98"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_below="@id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="#559C98"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/baseline_lock_open_24"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_below="@id/editPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#559C98"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_in"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="dont heve account?"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_below="@id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/Transparant"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/btnEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btnRegister"
            app:srcCompat="@drawable/google_login" />

    </RelativeLayout>

</ScrollView>