<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_page_ii"
    tools:context=".view.diagnose.ResultsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_background_ii">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtPenyakit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "Hasil Diganosa"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/HasilDiagnosa"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/gejala"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnKembaliDiagnosa"
                android:text="@string/check"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#559C98"
                android:padding="12dp"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMenuUtama"
                android:text="@string/menu_utama"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#559C98"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>