<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_page_ii"
    tools:context=".view.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

<!--        <ImageView-->
<!--            android:id="@+id/btnLogout"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginEnd="15dp"-->
<!--            android:contentDescription="@string/app_name"-->
<!--            android:src="@drawable/baseline_logout_24"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/textAppName"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@+id/textAppName" />-->

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/app_name"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/LayoutDiagnosa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@+id/LayoutRiwayat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/hamster_dua" />
                <!-- android:src="@drawable/gambar_dua"-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/diagnosa_penyakit"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutRiwayat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/LayoutDiagnosa"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/hamster_satu" />
                <!--android:src="@drawable/gambar_tiga"-->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/riwayat_diagnosa"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutInformasi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@+id/LayoutPetunjukPengguna"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LayoutDiagnosa">

                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/hamster_tiga" />
                <!--android:src="@drawable/gambar_satu"-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/informasi_penyakit"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutPetunjukPengguna"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/LayoutDiagnosa"
                app:layout_constraintTop_toBottomOf="@+id/LayoutRiwayat">

                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/hamster_empat" />
                <!--android:src="@drawable/gambar_empat"-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/petunjuk_pengguna"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutTrending"
                android:layout_width="360dp"
                android:layout_height="172dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/konten_a"
                android:padding="25dp"
                app:layout_constraintEnd_toEndOf="@id/LayoutRiwayat"
                app:layout_constraintStart_toStartOf="@id/LayoutDiagnosa"
                app:layout_constraintTop_toBottomOf="@id/LayoutPetunjukPengguna">

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottomNavigation"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/White"-->
<!--        app:itemIconTint="@color/GreenTosca"-->
<!--        app:itemIconSize="30dp"-->
<!--        app:labelVisibilityMode="unlabeled"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:menu="@menu/nav_bar" />-->

<!--    <View-->
<!--        android:id="@+id/ViewDivinder"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="@color/Divider"-->
<!--        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"-->
<!--        tools:ignore="MissingConstraints" />-->

</androidx.constraintlayout.widget.ConstraintLayout>